# spaces-ai

./: CHANGELOG.md  ImageSearchV2.md  README.md  README_SPACESAI.md  UI.md  docker-compose.yml  search_app_entrypoint.py
docs/oci_postgres_tf_stack/: README.md
docs/root/: Polyglot-AI-App.md  README_SPACESAI.md
docs/search-app/: NOTEBOOKLM_PARITY_CHECKLIST.md  NOTEBOOKLM_ROADMAP.md  PHASE2_TEST_PLAN.md  PHASE3_TEST_PLAN.md  PHASE4_TEST_PLAN.md  ROADMAP-4-STAGES.md
docs/search-app/db/: drop.md
oci_postgres_tf_stack/: README-ORM.md  README.md  availability_domains.tf  cache.tf  compute.tf  datasource.tf  example.tfvars  local.full.tfvars  network.tf  opensearch.tf  outputs.tf  outputs_config.tf  provider.tf  psql.tf  psql_configuration.tf  vars.tf
search-app/: .env.example  .gitignore  AGENTIC_DEEP_RESEARCH_SPEC.md  Dockerfile  High-Level-Overview.md  NOTEBOOKLM_PARITY_CHECKLIST.md  NOTEBOOKLM_ROADMAP.md  PHASE1_TEST_PLAN.md  PHASE3_TEST_PLAN.md  PHASE4_TEST_PLAN.md  PHASES.md  README.md  ROADMAP-4-STAGES.md  bootstrap-infra.sh  build-app.sh  pyproject.toml  run-app.sh  run.sh  start-app.sh  stop-app.sh
search-app/app/: __init__.py  agentic_research.py  auth.py  config.py  db.py  deep_research.py  deep_research_store.py  embeddings.py  external_sources.py  image_captioning.py  ingest_cli.py  llm.py  main.py  oci_llm.py  opensearch_adapter.py  pgvector_utils.py  reindex_cli.py  reindex_images_cli.py  runtime_config.py  search.py  session.py  store.py  text_utils.py  ui.py  users.py  valkey_cache.py  vision_embeddings.py
search-app/app/static/: style.css
search-app/app/templates/: index.html
search-app/db/: drop.md
search-app/enterprise_searchapp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
search-app/k8s/: configmap.yaml  deployment.yaml  service.yaml
tests/: test_agentic_research.py  test_api_smoke.py  test_cache_behavior.py  test_e2e_upload_search.py
