[project]
name = "enterprise-searchapp"
version = "0.4.0"
description = "SpacesAI (NotebookLM-like) FastAPI app with OCI PostgreSQL + pgvector backend: multi-tenant users/spaces, RAG, multimodal ingestion"
authors = [{ name = "Your Org", email = "devnull@example.com" }]
requires-python = ">=3.10"
readme = "README.md"
license = "Apache-2.0"

# Core runtime dependencies
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.6.0",
  "jinja2>=3.1.4",
  "python-multipart>=0.0.9",
  "psycopg[binary,pool]>=3.2.0",

  "beautifulsoup4>=4.12.2",
  "pypdf>=4.2.0",
  "sentence-transformers>=3.0.0",
  "tqdm>=4.66.0",
  "python-dotenv>=1.0.1",
  "oci>=2.129.0",
  "python-docx>=1.1.0",
  "passlib[bcrypt]>=1.7.4",
  "bcrypt<4.0.0",

  "opensearch-py>=2.6.0",
  "redis>=5.0.0",
  "boto3>=1.34.0",
  "requests>=2.31.0",
]



[project.optional-dependencies]
# Optional LLM providers
openai = ["openai>=1.60.0"]
pdf = ["pymupdf>=1.24.0", "pdfplumber>=0.11.0"]
office = ["python-pptx>=0.6.21", "openpyxl>=3.1.2"]
vision = ["pillow>=10.3.0", "pytesseract>=0.3.10"]
audio = ["ffmpeg-python>=0.2.0", "openai-whisper>=20231117"]

[project.urls]
Homepage = "https://github.com/your-org/enterprise-searchapp"

[project.scripts]
searchapp = "app.main:main"

[tool.setuptools]
# Explicitly declare packages to avoid auto-discovery picking up 'storage' as a namespace package
packages = ["app"]

[tool.uv]
# Ensure uv respects this project file for sync/install
package = true

[tool.ruff]
line-length = 120

[tool.pyright]
reportMissingImports = "warning"
